# parsec1

./: .travis.yml  ChangeLog.md  LICENSE  parsec1.cabal
Text/ParserCombinators/: Parsec.hs
Text/ParserCombinators/Parsec/: Char.hs  Combinator.hs  Error.hs  Pos.hs  Prim.hs
test/: Bugs.hs  Main.hs  Util.hs
test/Bugs/: Bug6.hs
