name:           parsec1
version:        1.0.0.8
license:        BSD3
license-file:   LICENSE
maintainer:     chr.maeder@web.de
category:       Parsing
synopsis:       Portable monadic parser combinators
description:
    Parsec is designed from scratch as an industrial-strength parser
    library.  It is simple, safe, well-known, has extensive libraries,
    good error messages, and is also fast.
    .
    This package is the core haskell98 part of the parsec2
    package as originally created by Daan Leijen. It is intended to
    preserve its simplicity and portability.
    .
    This version differs from the pervious one only by a MonadFail
    instance to let it compile with ghc-8.8.

build-type:     Simple
cabal-version:      >= 1.8

source-repository head
  type: git
  location: https://github.com/cmaeder/parsec1

library
  exposed-modules:
    Text.ParserCombinators.Parsec.Error,
    Text.ParserCombinators.Parsec.Char,
    Text.ParserCombinators.Parsec.Combinator,
    Text.ParserCombinators.Parsec.Pos,
    Text.ParserCombinators.Parsec.Prim,
    Text.ParserCombinators.Parsec
  build-depends:    base < 5
  other-extensions: CPP

test-suite parsec1-test
    type: exitcode-stdio-1.0

    hs-source-dirs: test
    main-is: Main.hs
    other-modules:
        Bugs
        Bugs.Bug6
        Util
    build-depends: base,
        parsec1,
        HUnit == 1.6.* || (>= 1.3.1.2 && < 1.4),
        test-framework == 0.8.*,
        test-framework-hunit == 0.3.*
    ghc-options: -Wall
